--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
 <link rel="stylesheet" href="css/main.css" />
 
-<script src="js/main.js"></script>
-
 </head>
 
 <body>
@@ -20,6 +18,12 @@
 <h1>Google I/O instant session search</h1>
 
 </div> 
+
+<video style="display: none;"></video> 
+
+<div id="data"></div>
+
+<script src="js/main.js"></script>
 
 <script src="js/lib/ga.js"></script>
 
