db working, before tweaking vtt files

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <div id="data"></div>
 
+<script src="js/webDatabase.js"></script>
 <script src="js/main.js"></script>
 
 <script src="js/lib/ga.js"></script>
