--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
 
 <h1>Google I/O instant session search</h1>
 
+<div id="info">
+	<span class="inputLabel">Enter text to search for:</span>
+	<input id="query" type="text" autofocus="true" />
+</div> <!-- info -->
+
+<!-- begin results container, content generated dynamically --> 
+<div id="resultsContainer"></div>
+<!-- end results container, content generated dynamically --> 
+
 </div> 
 
-<video style="display: none;"></video> 
 
-<div id="data"></div>
-
+<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
 <script src="js/webDatabase.js"></script>
 <script src="js/main.js"></script>
-
 <script src="js/lib/ga.js"></script>
 
 </body>
