--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
 <div id="container">
 
-<h1>Google I/O instant session search</h1>
+<h1>Google I/O Chrome session search</h1>
+
+<iframe class="youtube-player" type="text/html" width="640" height="385" frameborder="0"></iframe>
 
 <div id="info">
-	<span class="inputLabel">Enter text to search for:</span>
-	<input id="query" type="text" autofocus="true" />
+	<input id="query" type="text" autofocus="true"  />
 </div> <!-- info -->
 
 <!-- begin results container, content generated dynamically --> 
@@ -29,11 +30,11 @@
 </div> 
 
 
-<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+<script src="js/lib/jquery-1.8.2.js"></script>
 <script src="js/webDatabase.js"></script>
 <script src="js/main.js"></script>
-<script src="js/lib/ga.js"></script>
-
+<!-- <script src="js/lib/ga.js"></script>
+ -->
 </body>
 
 </html>
