--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>IO search</title>
 
@@ -23,18 +23,17 @@
 	<input id="query" type="text" autofocus="true"  />
 </div> <!-- info -->
 
-<!-- begin results container, content generated dynamically --> 
-<div id="resultsContainer"></div>
-<!-- end results container, content generated dynamically --> 
+<!-- begin results container, content generated dynamically -->
+<div id="results"></div>
+<!-- end results container, content generated dynamically -->
 
-</div> 
+</div>
 
 
 <script src="js/lib/jquery-1.8.2.js"></script>
 <script src="js/webDatabase.js"></script>
 <script src="js/main.js"></script>
-<!-- <script src="js/lib/ga.js"></script>
- -->
+<script src="js/lib/ga.js"></script>
 </body>
 
 </html>
