--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ Hangout this morning?
 
 <script src="js/lib/jquery-1.8.2.js"></script>
 <script src="js/webDatabase.js"></script>
+<script src="js/videos.js"></script>
 <script src="js/main.js"></script>
 <script src="js/lib/ga.js"></script>
 </body>
