--- a/originals/downloadVTT.html
+++ b/originals/downloadVTT.html
@@ -12,32 +12,19 @@
 <body>
 
 <div id="data"></div>
-// http://img.youtube.com/vi/3pxf3Ju2row/hqdefault.jpg
+
+<!-- // http://img.youtube.com/vi/3pxf3Ju2row/hqdefault.jpg -->
+
+<script type="text/javascript" src="../js/videos.js"></script>
 
 <script type="text/javascript">
-var xhr = new XMLHttpRequest();
-xhr.open("GET", "http://gdata.youtube.com/feeds/api/videos/3pxf3Ju2row?alt=json");
+var newVideos = {};
+for (var i = 0; i != videos.length; ++i){
+    var video = videos[i];
+    newVideos[video.id] = {content: video.content, rating: video.rating, speakers: video.speakers, title: video.title, viewCount: video.viewCount};
 
-
-
-xhr.onreadystatechange = function() {
-  if (xhr.readyState === 4 && xhr.status === 200) {
-    var obj = JSON.parse(xhr.responseText);
-    console.log(obj);
-    var content = obj.entry.content.$t.split("\n\n");
-    var video = {};
-    video.info = content[0];
-    video.subtitle = content[1];
-    video.description = content[2];
-    video.viewCount = obj.entry.yt$statistics.viewCount;
-    video.rating = obj.entry.gd$rating.average;
-    video.title = obj.entry.title.$t;
-    console.log(video);
-  }
 }
-
-xhr.send();
-
+document.getElementById("data").innerHTML = JSON.stringify(newVideos);
 </script>
 
 
