added seeking with callPlayer()

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <h1>Google I/O Chrome session search</h1>
 
-<iframe class="youtube-player" type="text/html" width="640" height="385" frameborder="0"></iframe>
+<iframe id="youTubePlayer" class="youtube-player" type="text/html" width="640" height="385" frameborder="0"></iframe>
 
 <div id="info">
 	<input id="query" type="text" autofocus="true"  />
@@ -64,6 +64,7 @@ Hangout this morning?
 
 
 <script src="js/lib/jquery-1.8.2.js"></script>
+<script src="js/lib/callPlayer.js"></script>
 <script src="js/webDatabase.js"></script>
 <script src="js/videos.js"></script>
 <script src="js/main.js"></script>
