--- a/originals/downloadVTT.html
+++ b/originals/downloadVTT.html
@@ -15,16 +15,58 @@
 
 <!-- // http://img.youtube.com/vi/3pxf3Ju2row/hqdefault.jpg -->
 
-<script type="text/javascript" src="../js/videos.js"></script>
-
 <script type="text/javascript">
-var newVideos = {};
-for (var i = 0; i != videos.length; ++i){
-    var video = videos[i];
-    newVideos[video.id] = {content: video.content, rating: video.rating, speakers: video.speakers, title: video.title, viewCount: video.viewCount};
+var videos = [];
+var videoIds = ["v9TG7OzsZqQ", "j8oFAr1YR-0", "TEwpppxgZhM", "1zvhs5FR0X8", "KOsJIhmeXoc",
+    "X_ek1wSe66o", "2txPYQOWBtg", "ie4I7B-umbA", "jD_-r6y558o", "x9KOS1VQgqQ", "hAzhayTnhEI",
+    "Prkyd5n0P7k", "YxogQGnMA9Y", "bsGgfUreyZw", "3pxf3Ju2row", "UC9LwtA_MC8", "Mk-tFn2Ix6g",
+    "O1YjdKh-rPg", "E8C8ouiXHHk", "VOf27ez_Hvg", "6EJ801el-I8", "GBxv8SaX0gg", "hFsCG7v9Y4c",
+    "0G9OaTzdOa0", "bwOhfoewMYs", "EvACKPBo_R8", "9M9sNheYGIw", "AusOPz8Ww80", "FrufJFBSoQY",
+    "Naol_TPPPL0", "VIBOCVY0Hvg", "g03bcb70kFQ", "30_AIEhar-I", "4f2Zky_YyyQ", "7os4DImjK5U",
+    "F_sbusEUz5w", "M3uWx-fhjUc", "N8SS-rUEZPg", "PAzY2MQxJDQ", "S6kqTymOi7k", "g3aBfkFbPWk",
+    "lMrkCoqgoxw", "n8hjjSzgRyw", "rT-BxYLZdeY", "seX7jYI96GE", "yd30Nmb3mPU"];
 
+function getVideoData(videoId){
+    var xhr = new XMLHttpRequest();
+    xhr.open("GET", "http://gdata.youtube.com/feeds/api/videos/" + videoId +"?alt=json");
+    xhr.onreadystatechange = function() {
+      if (xhr.readyState === 4 && xhr.status === 200) {
+        var obj = JSON.parse(xhr.responseText);
+        var content = obj.entry.content.$t;
+        var video = {};
+        video.content = content;
+        video.speakers = content.split(/[\n\n|\r\n\r\n]/)[0];
+        // video.subtitle = content[1];
+        // video.description = content[2];
+        video.viewCount = obj.entry.yt$statistics.viewCount;
+        video.rating = obj.entry.gd$rating.average;
+        video.title = obj.entry.title.$t;
+        video.id = videoId;
+        videos.push(video);
+        if (videoId === "yd30Nmb3mPU"){ // hack: last one
+            console.log(videos);
+            document.getElementById("data").innerHTML = JSON.stringify(videos);
+            if (videos.length !== videoIds.length){
+                alert("different length!");
+            }
+        }
+      }
+    }
+
+    xhr.send();
 }
-document.getElementById("data").innerHTML = JSON.stringify(newVideos);
+
+for (var i = 0; i != videoIds.length; ++i){
+    getVideoData(videoIds[i]);
+}
+
+// var newVideos = {};
+// for (var i = 0; i != videos.length; ++i){
+//     var video = videos[i];
+//     newVideos[video.id] = {content: video.content, rating: video.rating, speakers: video.speakers, title: video.title, viewCount: video.viewCount};
+
+// }
+// document.getElementById("data").innerHTML = JSON.stringify(newVideos);
 </script>
 
 
