moved video title to summary and details element

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Hangout this morning?
   <p>An entry in a WebSQL database is created for each cue of each track. Each database entry has the cue startTime, cue text, and YouTube video ID.</p>
   <p>When text is entered in the query input element, the cue database is searched using a read query with LIKE, and results are displayed.</p>
   <p>When a result is clicked, the <code>src</code> is set for the embedded YouTube player, with a start value corresponding to the start time of the cue.</p>
+  <p>Source code is available from <a href = "https://github.com/samdutton/tracksearch">github.com/samdutton.com/tracksearch</a>.</p>
 
 </details>
 
