--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <iframe id="youTubePlayer" class="youtube-player" type="text/html" width="640" height="385" frameborder="0"></iframe>
 
 <div id="info">
+  <label for="query">Enter text to search for in transcripts:</label>
 	<input id="query" type="text" autofocus="true"  />
 </div> <!-- info -->
 
