Tweaks to code -- added thumbnails

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <iframe id="youTubePlayer" class="youtube-player" type="text/html" width="640" height="385" frameborder="0"></iframe>
 
 <div id="info">
-  <label for="query">Enter text to search for in transcripts:</label>
 	<input id="query" type="text" autofocus="true"  />
+  <div id="queryExplanation">Enter text to search for in transcripts, then click on a result to view video.</div>
 </div> <!-- info -->
 
 <!-- begin results container, content generated dynamically -->
